--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,7 @@ svg path {
 .navlink.current {
   list-style: none;
   color: var(--blue-text);
+  transition: transform var(--timeing-function);
 }
 
 .navlink.current {
@@ -154,6 +155,7 @@ svg path {
   color: var(--blue-text);
   outline: none;
   fill: var(--blue-text);
+  transition: transform var(--timeing-function);
 }
 
 .list-item {
@@ -175,6 +177,7 @@ svg path {
 .mail:focus,
 .mail :hover {
   color: var(--blue-text);
+  transition: transform var(--timeing-function);
 }
 
 .phone {
@@ -295,6 +298,7 @@ button {
   background-color: var(--button-bg-active);
   outline: none;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
+  transition: transform var(--timeing-function);
 }
 
 /* portfollio */
@@ -361,7 +365,12 @@ button {
 .overlay-container:hover .overlay,
 .overlay-container:focus .overlay {
   transform: translateY(-100%);
-  
+  transition: transform var(--timeing-function);
+}
+
+.overlay-container:focus {
+  outline: none;
+  border: none;
 }
 
 .overlay {
@@ -391,10 +400,12 @@ button {
   color: var(--white-text);
 }
 
-.card:hover {
+.card:hover,
+.overlay-container :focus .card {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
   cursor: pointer;
   outline: none;
+  transition: transform var(--timeing-function);
 }
 
 .title {
@@ -633,7 +644,7 @@ button {
   position: absolute;
   bottom: 4px;
   left: 0;
-  width: 99%;
+  width: 100%;
   height: 70px;
   display: block;
   margin: 0;
@@ -748,7 +759,8 @@ color: #FFFFFF;
 .company:hover {
   border: 1px solid currentColor;
   color: var(--button-bg-active);
-  fill: var(--button-bg-active);
+  fill: var(--button-bg-active);4
+  transition: transform var(--timeing-function);
 }
 
 .company-link:focus {
@@ -756,6 +768,7 @@ color: #FFFFFF;
   border-radius: 4px;
   color: var(--button-bg-active);
   border: 1px solid currentColor;
+  transition: transform var(--timeing-function);
 }
 
 .company {
@@ -911,6 +924,7 @@ li.social-media {
   background-color: var(--button-bg-active);
   border: 0;
   outline: none;
+  transition: transform var(--timeing-function);
 }
 
 .social-media-link:hover,
@@ -918,6 +932,7 @@ li.social-media {
   color: var(--white-text);
   fill: var(--white-text);
   background-color: var(--button-bg-active);
+  transition: transform var(--timeing-function);
 }
 
 .backdrop {
