--- a/css/styles.css
+++ b/css/styles.css
@@ -1024,8 +1024,8 @@ li.social-media {
   height: 100%;
   border-radius: 50px;
   background-color: rgba(255, 255, 255, 0.1);
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  opacity: 1;
+  /* transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  opacity: 1; */
 }
 
 .social-media-item {
@@ -1050,9 +1050,9 @@ li.social-media {
   background-color: var(--button-bg-active);
   border: 0;
   outline: none;
-  transition-timing-function: var(--timeing-function);
+  /* transition-timing-function: var(--timeing-function);
   transition-duration: 250ms;
-  opacity: 0.7;
+  opacity: 0.7; */
 }
 
 .social-media-link:hover,
@@ -1060,6 +1060,6 @@ li.social-media {
   color: var(--white-text);
   fill: var(--white-text);
   background-color: var(--button-bg-active);
-  transition-duration: 250ms;
-  opacity: 0.7;
+  /* transition-duration: 250ms;
+  opacity: 0.7; */
 }
