--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,7 @@
 }
 
 *:focus {
-  transition: var(--timeing-function);
+  transition: var(--timing-function);
 }
 
 :root {
@@ -22,7 +22,7 @@
   --button-bg-non-active: #F5F4FA;
   --button-bg-active: #2196F3;
   --icon-non-active: #AFB1B8;
-  --timeing-function: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body{
@@ -104,34 +104,27 @@ svg path {
   color: var(--black-logo);
 }
 
-.web+.logo:hover {
-  transform: scale(0.75);
-}
-
 .navlink:hover,
 .navlink :focus,
-.navlink.current {
+.navlink.current:hover,
+.navlink.current :focus {
   list-style: none;
   color: var(--blue-text);
-  transition: transform var(--timeing-function);
-}
-
-.navlink:hover,
-.navlink :focus {
-  transform: ;
 }
 
 .navlink.current {
   position: relative;
+  color: var(--blue-text);
+
+  transition-property: color;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-delay: 250ms;
+  transition-timing-function: var(--timing-function);
 }
 
 .navlink {
+  transition-property: color;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-delay: 250ms;
+  transition-timing-function: var(--timing-function);
 }
 
 .navlink.current .current-link::after {
@@ -168,23 +161,22 @@ svg path {
   justify-content: center;
 }
 
-.list-item {
-  margin-left: 30px;
-  
-}
-
 .list-item :hover,
 .list-item :focus {
   color: var(--blue-text);
   outline: none;
-
-  transition: transform var(--timeing-function);
+  fill: var(--button-bg-active);
 }
 
 .list-item {
+  margin-left: 30px;
   color: var(--gray-text);
   justify-content: space-between;
   align-items: center;
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--timing-function);
 }
 
 .mail {
@@ -195,12 +187,16 @@ svg path {
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
+  /* transition-property: delay; */
+  transition-duration: 250ms;
+  transition-timing-function: var(--timing-function) 250ms;
 }
 
 .mail:focus,
-.mail :hover {
+.mail :hover,
+.phone:focus,
+.phone :hover {
   color: var(--blue-text);
-  transition: transform var(--timeing-function);
 }
 
 .phone {
@@ -211,6 +207,10 @@ svg path {
   background-repeat: no-repeat;
   background-size: contain;
   background-position: center;
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--timing-function);
 }
 
 .contacts-icon {
@@ -311,11 +311,11 @@ button {
   color: var(--black-text);
   background-color: var(--button-bg-non-active);
   border-radius: 4px;
+  transform: scale(1);
 
-  transition-property: zoom;
+  transition-property: color, background-color, transform;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-delay: 250ms;
+  transition-timing-function: var(--timing-function);
 }
 
 /* portfollio */
@@ -398,7 +398,7 @@ button {
 .card:hover .overlay,
 .overlay-container:focus .overlay {
   transform: translateY(-100%);
-  transition: transform var(--timeing-function);
+  transition: transform var(--timing-function);
 }
 
 .overlay-container:focus {
@@ -418,7 +418,7 @@ button {
   background-color: var(--button-bg-active);
   opacity: 0.9;
   transform: translateY(0);
-  transition: transform var(--timeing-function);
+  transition: transform var(--timing-function);
 }
 
 .overlay-text {
@@ -475,7 +475,7 @@ button {
 
   transition-property: zoom;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-timing-function: var(--timing-function);
   transition-delay: 250ms;
 }
 
@@ -499,7 +499,7 @@ button {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   opacity: 1;
-  transition: opacity var(--timeing-function);
+  transition: opacity var(--timing-function);
 }
 
 .backdrop.is-hidden {
@@ -523,7 +523,7 @@ button {
   border-radius: 4px;
 
 
-  transition: transform var(--timeing-function);
+  transition: transform var(--timing-function);
   animation-delay: 250ms;
 
 
@@ -874,14 +874,12 @@ svg.button-icon {
   justify-items: center;
   padding: 0;
   list-style: none;
-  transform: var(--timeing-function);
 }
 
 .company:hover {
   border: 1px solid currentColor;
   color: var(--button-bg-active);
   fill: var(--button-bg-active);
-  transform: var(--timeing-function);
 }
 
 .company-link:focus {
@@ -901,6 +899,9 @@ svg.button-icon {
   justify-content: center;
   align-items: center;
   
+  transition-property: color, border;
+  transition-duration: 250ms;
+  transition-timing-function: var(--timing-function);
 }
 
 .company-link {
@@ -910,7 +911,10 @@ svg.button-icon {
   align-items: center;
   justify-content: center;
   align-content: center;
-  transform: scale(1) var(--timeing-function);
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--timing-function);
 }
 
 .company-logo {
@@ -983,7 +987,7 @@ svg.button-icon {
 }
 
 .footer-content {
-  padding-left: 156px;
+  padding-left: 70px;
 }
 
 .social-media-container.footer {
@@ -1005,8 +1009,12 @@ svg.button-icon {
   background-size: contain;
   list-style: none;
   padding: 0px;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity 250ms var(--timing-function);
   opacity: 1;
+
+  transition-property: color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--timing-function);
 }
 
 li.social-media {
@@ -1020,12 +1028,14 @@ li.social-media {
   align-items: center;
   justify-content: center;
   background-size: contain;
-  width: 100%;
-  height: 100%;
+  width: 40px;
+  height: 40px;
   border-radius: 50px;
   background-color: rgba(255, 255, 255, 0.1);
-  /* transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  opacity: 1; */
+
+  transition-property: background-color;
+  transition-duration: 250ms;
+  transition-timing-function: var(--timing-function);
 }
 
 .social-media-item {
@@ -1034,9 +1044,11 @@ li.social-media {
   fill: currentColor;
 }
 
-/* .social-media-icon {
-  
-} */
+.footer-content .social-media-item {
+  width: 20px;
+  height: 20px;
+  color: var(--white-text);
+}
 
 .social-media:not(:last-child) {
   margin-right: 10px;
@@ -1050,9 +1062,6 @@ li.social-media {
   background-color: var(--button-bg-active);
   border: 0;
   outline: none;
-  /* transition-timing-function: var(--timeing-function);
-  transition-duration: 250ms;
-  opacity: 0.7; */
 }
 
 .social-media-link:hover,
